--- a/music_controller/frontend/package.json
+++ b/music_controller/frontend/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "frontend",
+  "name": "node",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "build" : "webpack --mode production"
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -27,5 +26,6 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^6.1.3",
     "react-router-dom": "^6.27.0"
-  }
+  },
+  "description": ""
 }
